--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-haskell-hspec-core (2.7.1-deepin1) unstable; urgency=medium
+haskell-hspec-core (2.8.5-1) unstable; urgency=medium
 
-  * Rebuild
+  * New upstream release
 
- -- Deepin Packages Builder <packages@deepin.org>  Mon, 14 Nov 2022 17:39:01 +0800
+ -- Clint Adams <clint@debian.org>  Tue, 14 Jun 2022 15:57:52 -0400
 
 haskell-hspec-core (2.7.1-1) unstable; urgency=medium
 
